# igdl

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
igdl/: __init__.py  __main__.py  archive.py  aria2.py  behavior.py  cli.py  client.py  config.py  downloader.py  exceptions.py  models.py  proxy.py  rate_limiter.py
tests/: test_models.py
